load-generator.yaml
apiVersion: v1
kind: Pod
metadata:
  name: load-generator
spec:
  containers:
  - name: busybox
    image: busybox
    command: ["/bin/sh"]
    args:
      - -c
      - >
        while true; do
          wget -q -O- http://sample-app/;
        done
